methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:31: error: not found: value color
      faireV(color.yellow)
             ^MethodsPicture:32: error: not found: value color
      faireV(color.red)
             ^MethodsPicture:33: error: not found: value color
      faireV(color.blue)
             ^MethodsPicture:34: error: not found: value color
      faireV(color.green)
             ^